# dotfiles

./: README.md  dot_gitconfig  dot_gitignore_global  dot_p10k.zsh  dot_proxy_env  dot_ripgreprc  dot_tmux.conf  dot_vimrc  dot_zshrc  run_once_config_git_local.sh  run_once_install_ohmyzsh_plugins.sh  run_once_install_vim_vundle.sh
dot_agents/: AGENTS.md
dot_claude/: CLAUDE.md  statusline-command.sh
py-repl/: pyproject.toml
