[project]
name = "py-repl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "ipython>=9.13.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
]
